View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023197 | Open CASCADE | OCCT:DRAW | public | 2012-06-08 15:12 | 2012-11-16 13:16 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | ||||
Product Version | 6.5.2 | ||||
Target Version | 6.5.4 | Fixed in Version | 6.5.4 | ||
Summary | 0023197: Draw executable do not detect update of environment variables on Windows. | ||||
Description | The update of env array do not detected inside Draw. It is common behavior of TCL on Windows. | ||||
Steps To Reproduce | pload XSDRAW restore shape a set env(CSF_dataDefaults) [file dirname [info script]]/../data;#path to your "data" file. puts $env(CSF_dataDefaults);#print correct path here DT_ApplySeq result a data data1;#do not detect CSF_dataDefaults environment variable. | ||||
Tags | No tags attached. | ||||
Test case number | csh 004 * | ||||
|
I propose we add a command in DRAW to change environment variables in C subsystem from DRAW, e.g. dsetenv. Then it can be set to update C environment automatically on updates made from Tcl (using Tcl 'trace' functionality), by adding relevant code to DrawDefaults script, e.g.: proc _update_c_env {envenv var op} { global env if { $op == "unset" } { dsetenv $var } else if { $op == "write" } { dsetenv $var $env($var) } } trace add variable env write _update_c_env trace add variable env unset _update_c_env |
|
Fix is provided in branch CR23197, please review |
|
Andrey, Please see my changes in CR23197 branch according to "array get env" problem on Windows. Vladimir |
|
Looks Ok to me |
|
Dear BugMaster, The workbenches KAS:dev:mkv-23197-occt (GIT branch CR23197) KAS:dev:mkv-23197-products (GIT master) were compiled on Linux platform and tested. Regression: Not detected Improvements: Not detected Testing case: csh 004 * See results in /QADisk/occttests/results/KAS/dev/mkv-23197-products_27062012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120622-opt_22062012/lin See test cases in /QADisk/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
occt: master b7e76224 2012-06-28 13:48:50
Committer: abv Details Diff |
0023197: Draw executable do not detect update of environment variables on Windows. New DRAW commands dgetenv and dsetenv are added, allowing to query and set environment variables as defined in C subsystem, from Tcl. On Windows, special handler is armed in DrawDefaults providing automatic update of C environment when Tcl environment (array env) is modified. Note that this is not needed on Linux (Tcl does this internally). Fixed problem with "array get env" command. Added comments to _update_c_env proc. |
Affected Issues 0023197 |
|
mod - src/Draw/Draw_VariableCommands.cxx | Diff File | ||
mod - src/DrawResources/DrawDefault | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-06-08 15:12 |
|
New Issue | |
2012-06-08 15:12 |
|
Assigned To | => abv |
2012-06-08 15:42 |
|
Note Added: 0020677 | |
2012-06-08 15:42 |
|
Status | new => assigned |
2012-06-25 15:45 |
|
Note Added: 0020787 | |
2012-06-25 15:45 |
|
Assigned To | abv => vtn |
2012-06-25 15:45 |
|
Status | assigned => resolved |
2012-06-27 13:59 |
|
Assigned To | vtn => abv |
2012-06-27 14:00 |
|
Note Added: 0020804 | |
2012-06-27 15:50 |
|
Note Added: 0020805 | |
2012-06-27 15:50 |
|
Status | resolved => reviewed |
2012-06-27 16:33 |
|
Assigned To | abv => mkv |
2012-06-28 13:02 |
|
File Added: Y0 | |
2012-06-28 14:24 |
|
Test case number | => chl 935 Y0 |
2012-06-28 15:23 |
|
Note Added: 0020810 | |
2012-06-28 15:24 |
|
File Deleted: Y0 | |
2012-06-28 15:24 |
|
Test case number | chl 935 Y0 => csh 004 * |
2012-06-28 15:24 |
|
Assigned To | mkv => bugmaster |
2012-06-28 15:24 |
|
Status | reviewed => tested |
2012-07-02 11:43 |
|
Changeset attached | => occt master b7e76224 |
2012-07-02 11:43 |
|
Assigned To | bugmaster => abv |
2012-07-02 11:43 |
|
Status | tested => verified |
2012-07-02 11:43 |
|
Resolution | open => fixed |
2012-11-16 13:15 | bugmaster | Fixed in Version | => 6.5.4 |
2012-11-16 13:16 | bugmaster | Status | verified => closed |